--- a/index.html
+++ b/index.html
@@ -291,14 +291,14 @@
 
 		    <!-- ================ Third row ==========  -->
 			    <div class="row">
-			    	<div class="col-sm-4">
+			    	<!-- <div class="col-sm-4">
 			    		<section>
 			    			<a href="" target="_blank"><img src="images/recording.png"></a>
 			    			<h3>screenRecorder <button class="btn btn-info btn-xs">beta 1.0</button></h3>
 			    			<p>A <strong>Screen recorder gooogle app</strong> that records your screen.
 			    			   You can record your online video lecture's etc. Specially designed for <b> chromebook users</b>.</p>
 			    		</section>
-			    	</div>
+			    	</div> -->
 			    	<div class="col-sm-4">
 			    		<section>
 			    			<a href="htmlLink/quoraAlerts/info.html" target="_blank"><img src="images/quora.png"></a>
