--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 		 <div class="container">
 		 	 <div class="row">
 			     <ul class="icon">
-				    <li><a href="https://www.facebook.com/akshay.kataria.794" target="_blank"><img src="images/facebook.png" alt="Facebook Link"/></a></li>
+				    <li><a href="https://www.facebook.com/animalbarbell" target="_blank"><img src="images/facebook.png" alt="Facebook Link"/></a></li>
 					<li><a href="https://twitter.com/akshay_kataria1" target="_blank"><img src="images/twitter.png" alt="Twitter Link"/></a></li>
 					<li><a href="" target="_blank"><img src="images/gplus2.png" alt="Google+ Link"></a></li>
 					<li><a href="https://www.instagram.com/animalbarbell/" target="_blank"><img src="images/instagram.png" alt="instagram link"></a></li>
