3 section is removed

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 			    			<a href="htmlLink/battleship/battleship.html" target="_blank"><button type="button" class="btn btn-success">Play</button></a>
 			    		</section>
 			    	</div>
-			    	<div class="col-sm-4">
+			    	<!-- <div class="col-sm-4">
 			    		<section>
 			    			<img src="images/android.png">
 			    			<h3>Android app</h3>
@@ -256,6 +256,14 @@
 			    					20%
 			    				</div>
 			    			</div>
+			    		</section>
+			    	</div> -->
+			    	<div class="col-sm-4">
+			    		<section>
+			    			<a href="htmlLink/quoraAlerts/info.html" target="_blank"><img src="images/quora.png"></a>
+			    			<h3>quoraAlerts <button class="btn btn-danger btn-xs">new</button></h3>
+			    			<p>It's a chrome extension built using <strong>notification api</strong>. It shows you a notification corresponding to each new post
+			    			     on <b>Quora</b>.</p>
 			    		</section>
 			    	</div>
 
@@ -290,7 +298,7 @@
 			    </div>
 
 		    <!-- ================ Third row ==========  -->
-			    <div class="row">
+			   <!-- <div class="row">
 			    	<!-- <div class="col-sm-4">
 			    		<section>
 			    			<a href="" target="_blank"><img src="images/recording.png"></a>
@@ -298,8 +306,8 @@
 			    			<p>A <strong>Screen recorder gooogle app</strong> that records your screen.
 			    			   You can record your online video lecture's etc. Specially designed for <b> chromebook users</b>.</p>
 			    		</section>
-			    	</div> -->
-			    	<div class="col-sm-4">
+			    	</div> --> 
+			    	<!-- <div class="col-sm-4">
 			    		<section>
 			    			<a href="htmlLink/quoraAlerts/info.html" target="_blank"><img src="images/quora.png"></a>
 			    			<h3>quoraAlerts <button class="btn btn-danger btn-xs">new</button></h3>
@@ -316,10 +324,10 @@
 			    	</div>  -->
 
 
-			    </div>  <!-- ==== row ended ==== -->
+			   <!-- </div>  <!-- ==== row ended ==== -->
 	      </div>
 	  </div>
-	</div>
+	</div> 
 
     <a id="#headwrapper" href="#" class="back-to-top">back to top </a>
 	<!-- =========== resume ============ -->
@@ -332,7 +340,7 @@
     <!-- ================== footer ============== -->
     <footer class="footer">
     	<div class="container">
-    		<p>Copyrights &copy; Akshay Kataria 2015 &hearts;</p>
+    		<p>Copyrights &copy; Akshay Kataria 2017 &hearts;</p>
     	</div>
 
     </footer>
