--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 		  <div class="container">
 			<img src="images/pic3.png" class="img-circle text-center" style="height:120px;width:120px;margin-left:30px;border-radius:100%;margin-top:-40px;border:3px solid #fff;" alt="akshay kataria">
 			<h1> Akshay </h1>
-			   <h2>Some people dream of success.. while others wake up and work hard at it</h2>
+			   <h2>Judge me by my work, not by degree !</h2>
 		 </div>
 
 		 <div class="container">
