--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 		<header class="clearfix">
 		  <div class="container">
 			<img src="images/pic3.png" class="img-circle text-center" style="height:120px;width:120px;margin-left:30px;border-radius:100%;margin-top:-40px;border:3px solid #fff;" alt="akshay kataria">
-			<h1> Akshay </h1>
-			   <h2>Judge me by my work, not by degree !</h2>
+			<h1 style="font-size: 75px"> Akshay </h1>
+			   <h2 style="font-size: 38px;font-family:Times Now">Judge me by my work, not by degree !</h2>
 		 </div>
 
 		 <div class="container">
